--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,2 @@
 /com/
-/company-protal.properties
-/company-rpc-dev.properties
-/myqdp_app_config.properties
-/newtec.bpm.properties
-/node-config.properties
-/sso-ftp.properties
+/META-INF/
