--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,6 @@
 /com/
-/META-INF/
+/company-rpc-dev.properties
+/myqdp_app_config.properties
+/newtec.bpm.properties
+/node-config.properties
+/sso-ftp.properties
