--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,8 @@
+/META-INF/
 /com/
+/company-protal.properties
+/company-rpc-dev.properties
+/myqdp_app_config.properties
+/newtec.bpm.properties
+/node-config.properties
+/sso-ftp.properties
